tests/integration/error/null_infer_type.alo
// expect-error: Cannot infer type from null

fun main() -> void {
  imut value = null;
}
